--- a/Projekt_Wizualizacja/Projekt_Wizualizacja.csproj
+++ b/Projekt_Wizualizacja/Projekt_Wizualizacja.csproj
@@ -142,6 +142,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reklamy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reklamy.Designer.cs">
+      <DependentUpon>Reklamy.cs</DependentUpon>
+    </Compile>
     <Compile Include="Semestralne_KtoreMiesiace.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -206,6 +212,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Reklamy.resx">
+      <DependentUpon>Reklamy.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Semestralne_KtoreMiesiace.resx">
       <DependentUpon>Semestralne_KtoreMiesiace.cs</DependentUpon>
     </EmbeddedResource>
